# Shizuku

./: CMakeLists.txt  Folder_discription.txt  load_toolchain.cmake
config/: CMakeLists.txt  default_conf.cmake
config/pico_sdk/: CMakeLists.txt
image/: CMakeLists.txt
image/pico_sdk/: CMakeLists.txt  main.c  main.cpp
kernel/: CMakeLists.txt
kernel/config/: CMakeLists.txt
kernel/config/interface/shizuku/: config.hpp  config.hpp.configure  config.hpp.in  memory_manager.hpp  memory_manager.hpp.configure  platform.hpp  platform.hpp.configure  processor.hpp  processor.hpp.configure  processor.hpp.in
kernel/interface/: shizuku.hpp  shizuku_entry.h
kernel/interface/shizuku/: kernel.hpp  namespaces.hpp  object.hpp  processors.hpp
kernel/lib/: CMakeLists.txt
kernel/lib/pico_sdk/: CMakeLists.txt
kernel/lib/pico_sdk/platform/: CMakeLists.txt
kernel/lib/pico_sdk/platform/memory_manager/: CMakeLists.txt  memory_manager.cpp
kernel/lib/pico_sdk/platform/memory_manager/include/shizuku/memory_managers/: pico_sdk.hpp
kernel/src/: CMakeLists.txt  add_task.cpp  add_thread.cpp  call_method.cpp  context_switch.cpp  create_object.cpp  create_thread.cpp  entry.cpp  export_method.cpp  get_current_object_is_super.cpp  get_current_thread.cpp  kernel.cpp
kernel/src/cpu_manager/: CMakeLists.txt  add_task.cpp  context_switch.cpp
kernel/src/cpu_manager/include/shizuku/cpu_manager/: cpu_manager.hpp
kernel/src/entry/: CMakeLists.txt  entry.cpp
kernel/src/entry_point/: CMakeLists.txt
kernel/src/for_super_object_api/: CMakeLists.txt  add_task.cpp  export_method.cpp  get_current_object_is_super.cpp  get_current_thread.cpp
kernel/src/include/shizuku/: api_result.hpp  check_config.hpp  cpu_manager.hpp  function.hpp  kernel.hpp  memory_managers.hpp  method.hpp  namespaces.hpp  object.hpp  platforms.hpp  processors.hpp  same_type.hpp  thread.hpp
kernel/src/object_system/: CMakeLists.txt  add_func.cpp  add_thread.cpp  call_func.cpp  call_function.cpp  create_object.cpp  create_thread.cpp  delete_exported_method.cpp  export_method.cpp  remove_thread.cpp
kernel/src/object_system/include/shizuku/: object.hpp
kernel/src/processors/: CMakeLists.txt
kernel/src/processors/rp2040/: CMakeLists.txt  abort_current_task.cpp  add_task.cpp  auto_exit_request.cpp  change_current_task_property.cpp  construct_entry.cpp  context_switch.cpp  entry_func.cpp  get_current_context.cpp  get_current_object.cpp  load_context.cpp  save_context.cpp
kernel/src/processors/rp2040/include/shizuku/processors/: processor.hpp  rp2040.hpp
kernel/src/scheduler/: CMakeLists.txt  enqueue.cpp  scheduler.cpp
kernel/test/: CMakeLists.txt  MMU_emulate_test.cpp  multithread_test.cpp  object_system_test.cpp
toolchains/: pico_sdk.cmake  raspberryPi_pico_pico_sdk.cmake
