cmake_minimum_required(VERSION 3.26)
include(load_toolchain.cmake)
add_compile_options(-Wall)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED on)
project(shizuku C CXX ASM)
add_subdirectory(config)
add_subdirectory(kernel)
add_subdirectory(image)
add_compile_options(-flto)
add_link_options(-flto)
