set(SHIZUKU_PLATFORM "unknown" CACHE STRING "shizuku platform name")
set(SHIZUKU_PROCESSOR "unknown" CACHE STRING "shizuku processor name")
if(SHIZUKU_PLATFORM STREQUAL "unknown")
message(SEND_ERROR SHIZUKU_PLATFORM is unknown)
else()
add_subdirectory(${SHIZUKU_PLATFORM})
endif()
message(SHIZUKU_PLATFORM:${SHIZUKU_PLATFORM})
message(SHIZUKU_PROCESSOR:${SHIZUKU_PROCESSOR})