cmake_minimum_required(VERSION 3.26)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(shizukuimage C CXX ASM)
pico_sdk_init()
add_executable(shizuku main.c)
target_link_libraries(shizuku pico_stdlib)
pico_enable_stdio_usb(shizuku 1)
pico_enable_stdio_uart(shizuku 0)
pico_add_extra_outputs(shizuku)
add_custom_command(TARGET shizuku POST_BUILD COMMAND cp ${CMAKE_CURRENT_BINARY_DIR}/shizuku.uf2 ${CMAKE_BINARY_DIR}/)